Fixed issue with overflow in the gk_quary style

--- a/mod_image_show_gk4/styles/gk_quark/style.css
+++ b/mod_image_show_gk4/styles/gk_quark/style.css
@@ -12,6 +12,7 @@
 .gkIsWrapper-gk_quark {
 	background: transparent;
 	margin: 0;
+	overflow: hidden;
 	position: relative;
 }
 
